# xmath

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  common_testing.h  curves.c  curves.h  curves_test.c  mat4.c  mat4.h  mat4_test.c  quat.c  quat.h  quat_test.c  scalar.c  scalar.h  scalar_test.c  transform.c  transform.h  transform_test.c  vec2.c  vec2.h  vec2_test.c  vec3.c  vec3.h  vec3_test.c  vec4.c  vec4.h  vec4_test.c  xmath.c  xmath.h  xmath_test.c
.github/workflows/: cmake-multi-platform.yml
cmake/: FetchCMocka.cmake  FindM.cmake
docs/: Doxyfile.in
